--- a/end-term/demo.js.ipynb
+++ b/end-term/demo.js.ipynb
@@ -322,6 +322,240 @@
     "\n",
     "coolAddress === student.address;\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4838f91b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number\n",
+      "number\n",
+      "string\n",
+      "boolean\n",
+      "object\n",
+      "object\n",
+      "function\n",
+      "function\n",
+      "object\n",
+      "undefined\n",
+      "number\n",
+      "symbol\n"
+     ]
+    }
+   ],
+   "source": [
+    "console.log(typeof 10); // number\n",
+    "console.log(typeof 10.2); // number\n",
+    "console.log(typeof 'vidu');\n",
+    "console.log(typeof true);\n",
+    "console.log(typeof [1, 2, 3]); // object\n",
+    "console.log(typeof new Date());\n",
+    "console.log(typeof function () {});\n",
+    "console.log(typeof (() => {}));\n",
+    "console.log(typeof null); // object\n",
+    "console.log(typeof undefined); // undefined\n",
+    "console.log(typeof NaN); // number\n",
+    "console.log(typeof Symbol('vishnu')); // symbol\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "458dd990",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "25\n",
+      "115\n"
+     ]
+    }
+   ],
+   "source": [
+    "function add(num1, num2, num3) {\n",
+    "  return num1 + num2 + num3;\n",
+    "}\n",
+    "\n",
+    "const boundAdd = add.bind(null, 5, 10);\n",
+    "\n",
+    "console.log(add(5, 10, 10));\n",
+    "console.log(boundAdd(10));\n",
+    "console.log(boundAdd(100));\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b7d831fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Vidu, you are very welcome to India\n",
+      "hello Vishnu, you are very welcome to India\n"
+     ]
+    }
+   ],
+   "source": [
+    "function greet(country, myName) {\n",
+    "  return `hello ${myName}, you are very welcome to ${country}`;\n",
+    "}\n",
+    "\n",
+    "console.log(greet('India', 'Vidu'));\n",
+    "console.log(greet('India', 'Vishnu'));\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a33f8554",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello Vidu, you are very welcome to India\n",
+      "hello Vishnu, you are very welcome to India\n",
+      "hello CMD, you are very welcome to China\n",
+      "hello Paru, you are very welcome to China\n",
+      "hello Muskan, you are very welcome to China\n"
+     ]
+    }
+   ],
+   "source": [
+    "function greet(country, myName) {\n",
+    "  return `hello ${myName}, you are very welcome to ${country}`;\n",
+    "}\n",
+    "\n",
+    "const greetBoundIndia = greet.bind(null, 'India');\n",
+    "const greetBoundChina = greet.bind(null, 'China');\n",
+    "\n",
+    "console.log(greetBoundIndia('Vidu'));\n",
+    "console.log(greetBoundIndia('Vishnu'));\n",
+    "console.log(greetBoundChina('CMD'));\n",
+    "console.log(greetBoundChina('Paru'));\n",
+    "console.log(greetBoundChina('Muskan'));\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e6a4d74f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "obj is [object Object]\n",
+      "obj is: { y: 15 }\n",
+      "[object Object]\n"
+     ]
+    }
+   ],
+   "source": [
+    "const obj = {\n",
+    "  y: 15,\n",
+    "};\n",
+    "\n",
+    "console.log(`obj is ${obj}`);\n",
+    "console.log(`obj is:`, obj);\n",
+    "console.log(String(obj));\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ff38369a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "string\n",
+      "string\n"
+     ]
+    }
+   ],
+   "source": [
+    "console.log(typeof String(obj));\n",
+    "console.log(typeof JSON.stringify(obj));\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5394abd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n",
+      "apple\n",
+      "true\n",
+      "1,2,3\n",
+      "omg i am vidu\n",
+      "Thu Apr 10 2025 11:25:51 GMT+0530 (India Standard Time)\n"
+     ]
+    }
+   ],
+   "source": [
+    "const myObj = {\n",
+    "  name: 'vidu',\n",
+    "\n",
+    "  // this is triggered when u try to convert this obj into string\n",
+    "  toString() {\n",
+    "    return `omg i am ${this.name}`;\n",
+    "  },\n",
+    "};\n",
+    "\n",
+    "console.log(String(19));\n",
+    "console.log(String('apple'));\n",
+    "console.log(String(true));\n",
+    "console.log(String([1, 2, 3]));\n",
+    "console.log(String(myObj)); // omg i am vidu\n",
+    "console.log(String(new Date()));\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a80f1c5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Window {}\n",
+      "Window {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "const hello = () => {\n",
+    "  console.log(this);\n",
+    "};\n",
+    "\n",
+    "hello();\n",
+    "\n",
+    "const boundHello = hello.bind({ name: 'vidu' });\n",
+    "boundHello();\n"
+   ]
   }
  ],
  "metadata": {
