ET The game is about to end

--- a/end-term/demo.js.ipynb
+++ b/end-term/demo.js.ipynb
@@ -556,6 +556,31 @@
     "const boundHello = hello.bind({ name: 'vidu' });\n",
     "boundHello();\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "622f1ad4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[ \u001b[32m\"apple\"\u001b[39m, \u001b[32m\"orange\"\u001b[39m, \u001b[32m\"banana\"\u001b[39m ]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let likeBanana = true;\n",
+    "\n",
+    "let fruits = ['apple', 'orange', likeBanana ? 'banana' : ''];\n",
+    "\n",
+    "fruits;\n"
+   ]
   }
  ],
  "metadata": {
